Fixing alignment of text in login page

--- a/CSS/webstyle.css
+++ b/CSS/webstyle.css
@@ -290,7 +290,7 @@ hr .download-line-break{
   margin-top: 30px;
   background-color: rgba(49, 176, 45, 1);
 }
-.account-signup,{
+.account-signup{
   color: #fff;
   text-align: center;
   font-size: 22px;
